# tic_tac_toe

./: CMakeLists.txt  README.md
src/: config.hpp.in  main.cpp
src/board/: Board.cpp  Board.hpp
src/random/: random.cpp  random.hpp
src/text/: text.cpp  text.hpp
